feat(shared): give every failure the same shape on the wire
ProblemDetailAdvice turns the catalogue into RFC 7807 bodies: the named
errors a service throws, a stale If-Match, a validation failure, an
unknown path, and whatever else escapes.

Three things the obvious implementation gets wrong. A handler returning
a bare ProblemDetail answers 500 while the body claims 409, because the
status inside the body is not the status of the response — so handlers
return ResponseEntity. An unknown path reached the catch-all and became
a 500 with a stack trace, for something as ordinary as a stale bookmark.
And params used Map.copyOf, whose iteration order is salted per JVM run,
so the same error serialised differently between runs; the test that
pinned the documented example caught it on the second run.

A cross-tenant write answers 500 rather than 403 or 404. Reads already
return empty, so no legitimate client can reach it: the code built an
object with the wrong owner. 403 would confirm the row exists.

Validation publishes field names and never the rejected value — that
value is user content, and a response body ends up in logs, screenshots
and issue reports.

type is relative (/errors/conflicting-preferences) because the product
document forbids baking the domain into code, and title is derived from
the code so there is no second list to drift.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012JPhcAB8L9MByyFCSReymU